arm_ss.add(when: 'CONFIG_PMB887X', if_true: files(
	'board.c',
	'fifo.c',
	'flash.c',
	'flash-blk.c',
	'adc.c',
	'ebu.c',
	'dmac.c',
	'stm.c',
	'pll.c',
	'scu.c',
	'sccu.c',
	'gpio.c',
	'usart.c',
	'mmci.c',
	'gptu.c',
	'vic.c',
	'tpu.c',
	'rtc.c',
	'i2c_v1.c',
	'i2c_v2.c',
	'capcom.c',
	'dsp.c',
	'ssc.c',
	'dif_v1.c',
	'dif_v2.c',
	'mod.c',
	'keypad.c',
	'unknown.c',
	'io_bridge.c',
	'regs_dump.c',

	'gen/brom.c',
	'gen/cpu_meta.c',
	'gen/cpu_modules.c',
	'gen/flash-info.c',

	'board/dsp.c',
	'board/analog.c',
	'board/board.c',
	'board/cpu_module.c',
	'board/devices.c',
	'board/gpio.c',
	'board/keyboard.c',
	'board/memory.c',

	'utils/config.c',
	'utils/regexp.c',
	'utils/strings.c',

	'ssc/s1d13705.c',
	'ssc/b00b10b.c',
	'ssc/lcd_common.c',
	'ssc/lcd_jbt6k71.c',
	'ssc/lcd_ssd1286.c',

	'i2c/d1094xx.c',
	'i2c/pmb6812.c',
	'i2c/tea5761uk.c',
))
